[metadata]
name = config-updater
version = 1.0.0
author = Sergii Lovygin
author_email = lovygin.dev@gmail.com
summary = Simple tool to update/override cfg (ini) files from build scripts or CI pipelines via parameters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanykey/config-updater
license = MIT
license_files = LICENSE
classifiers =
         Programming Language :: Python :: 3
         License :: OSI Approved :: MIT License
         Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click

[options.entry_points]
console_scripts =
    config-updater = config_updater.app:cli

[options.packages.find]
include = config_updater
exclude =
    data
    tests
